--- a/settingsdialog.ui
+++ b/settingsdialog.ui
@@ -168,6 +168,20 @@
        <item row="0" column="1">
         <widget class="QComboBox" name="themeComboBox"/>
        </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="silentModeLabel">
+         <property name="text">
+          <string>通知设置:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QCheckBox" name="silentModeCheckBox">
+         <property name="text">
+          <string>静默模式（不显示系统通知）</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="localServerTab">
